# PyPr

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
