[project]
name = "pypr"
version = "0.1.0"
description = "Minimal setup for a Python project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

# Depencencies used in development but not used in production should be installed in different group.
# Use `uv sync --only-dev` to sync only these.
[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "mypy>=1.18.2",
    "ruff>=0.14.1",
]

# For reference see: https://docs.astral.sh/ruff/settings

[tool.ruff]
target-version = "py313"
line-length = 100
fix = true
indent-width = 4

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = false

# For reference see: https://docs.astral.sh/ruff/rules/

[tool.ruff.lint]
preview = true
select = [
    "B",      # flake8-bugbear — likely bugs / best-practices
    "ANN",    # typing/annotations — keep if you use static typing
    "ARG",    # unused function args
    "ASYNC",  # async/await anti-patterns
    "C90",    # cyclomatic complexity (tune threshold separately)
    "D",      # pydocstyle — docstring rules
    "G",      # logging-format correctness
    "I",      # import ordering / issues
    "PERF",   # performance checks
    "S",      # security (Bandit) rules
    "TC",     # type-checking import rules
]


# Use Google-style doc comments.
[tool.ruff.lint.pydocstyle]
convention = "google"
