[project]
name = "pypr"
version = "0.1.0"
description = "Minimal setup for a Python project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

# Depencencies used in development but not used in production should be installed in different group.
# Use `uv sync --only-dev` to sync only these.
[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "mypy>=1.18.2",
    "ruff>=0.14.1",
]

# For reference see: https://docs.astral.sh/ruff/settings

[tool.ruff]
target-version = "py313"
line-length = 100
fix = true
indent-width = 4

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = false

# For reference see: https://docs.astral.sh/ruff/rules/

[tool.ruff.lint]
select = [ "ALL" ]
ignore = [
    # ==== Uncomment these to stop checks for docstrings
    # "D100",     # pydocstyle: undocumented-public-module
    # "D101",     # pydocstyle: undocumented-public-class
    # "D102",     # pydocstyle: undocumented-public-method
    # "D103",     # pydocstyle: undocumented-public-function
    # "D104",     # pydocstyle: undocumented-public-package
    # "D105",     # pydocstyle: undocumented-magic-method
    # "D106",     # pydocstyle: undocumented-public-nested-class
    # "D107",     # pydocstyle: undocumented-public-init
    # ====
    "D203",     # pydocstyle: one-blank-line-before-class
    "D213",     # pydocstyle: multi-line-summary-second-line
    "ANN002",	# flake8-annotations: missing-type-args
	"ANN003",	# flake8-annotations: missing-type-kwargs
    "ASYNC1",   # flake8-trio
    "S603",		# flake8-bandit: subprocess-without-shell-equals-true
	"S607",		# flake8-bandit: start-process-with-partial-path
	"DJ",		# flake8-django
	"EM",		# flake8-errmsg
    "G004",     # flake8-logging-format: logging-f-string
    "TD002",    # flake8-todos: missing-todo-author
    "TD003",    # flake8-todos: missing-todo-link
    "FIX",      # flake8-fixme
    "ERA001",   # eradicate: commented-out-code
	"PD",		# pandas-vet
	"PLR0911",	# pylint: too-many-return-statements
	"PLR0913",	# pylint: too-many-arguments
	"TRY003",	# tryceratops: raise-vanilla-args
	"NPY",		# numpy
	"AIR",		# airflow
	"RUF001",	# ruff: ambiguous-unicode-character-string
	"RUF002",	# ruff: ambiguous-unicode-character-docstring
	"RUF003",	# ruff: ambiguous-unicode-character-comment
]

# Some linter rules could be omitted for tests
[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "S101",     # flake8-bandit: assert
    "SLF001",   # flake8-self: private-member-access
]

# Use Google-style doc comments.
[tool.ruff.lint.pydocstyle]
convention = "google"
